# foobarbaz

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  shell.nix
entity/: Cargo.toml
entity/src/: lib.rs  sea_orm_active_enums.rs  task.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: api.rs  error.rs  main.rs  repository.rs  task_consumer.rs  worker.rs
src/api/: forms.rs  routes.rs
src/repository/: postgres.rs  redis.rs
