[package]
name = "foobarbaz"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
reqwest = "0.11.18"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
entity = { path = "./entity" }
fastrand = "1.9.0"
serde = { version = "1.0.164", features = ["derive"] }

[dependencies.redis]
version = "0.23.0"
default-features = false
features = ["sha1_smol", "tokio", "tokio-comp", "aio", "ahash", "script", "tokio-native-tls-comp"]


[dependencies.sea-orm]
version = "0.11.3"
features = [
  # `ASYNC_RUNTIME`
  "runtime-tokio-rustls",
  # `DATABASE_DRIVER`
  "sqlx-postgres",
]

[dev-dependencies]
serde_json = "1.0.96"
